@@ -1,3 +1,8 @@
+2009-10-02  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/41479
+	* gfortran.dg/intent_out_5.f90: New test.
+
 2009-10-02  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/41404
